🔒 SECURITY: Implement comprehensive security fixes for Issue #1
## Phase 1 Security Improvements Implemented

### ✅ Critical Security Vulnerabilities Fixed

**1. Secure Environment Management**
- Added comprehensive environment validation with Zod schemas
- Created secure key generation script (scripts/generate-security-keys.js)
- Updated .env.example with proper security configuration
- Enforced minimum key lengths and secure key formats

**2. Authentication & Authorization**
- Implemented JWT-based authentication with proper claims
- Added API key authentication with constant-time comparison
- Created multi-factor authentication (API Key + Device + JWT)
- Added role-based access control (RBAC) middleware
- Implemented device authentication and fingerprinting

**3. Input Validation & Sanitization**
- Added comprehensive request validation with Zod schemas
- Implemented input sanitization middleware to prevent XSS/SQL injection
- Added content-type validation and request size limiting
- Created structured validation error responses

**4. Security Middleware Stack**
- Enforced HTTPS in production environments
- Added comprehensive security headers (Helmet + custom)
- Implemented CORS protection with configurable origins
- Added rate limiting (general + payment-specific)
- Created security event logging and monitoring

**5. Encryption & Data Protection**
- Implemented AES-256 encryption for sensitive data
- Added secure password hashing with PBKDF2
- Created utilities for payment data encryption (PCI DSS compliance)
- Added biometric data encryption capabilities
- Implemented secure token and ID generation

### 🛡️ Security Features Added

- **Environment Validation**: Validates all required environment variables on startup
- **Request Logging**: Logs all requests with sensitive data redaction
- **Error Handling**: Secure error responses that don't leak sensitive information
- **API Security**: All payment endpoints now require API key + device authentication
- **Crypt

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,42 @@
-# Universal Payment Protocol Environment Configuration
-# Copy this file to .env and fill in your actual values
+# Universal Payment Protocol - Environment Configuration
+# Copy this file to .env and update with your actual values
 
-# Stripe Configuration (Required)
-# Get these from your Stripe Dashboard: https://dashboard.stripe.com/apikeys
+# =====================================
+# APPLICATION SETTINGS
+# =====================================
+NODE_ENV=development
+PORT=3000
+FRONTEND_URL=http://localhost:3000
+
+# =====================================
+# STRIPE CONFIGURATION (REQUIRED)
+# =====================================
+# Get these from https://dashboard.stripe.com/apikeys
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
-# Security Configuration (Required)
-# Generate using: node scripts/generate-encryption-key.js
-# Use AES-256 key (64 hex characters) for maximum security
-ENCRYPTION_KEY=your_generated_encryption_key_here
+# =====================================
+# SECURITY CONFIGURATION (REQUIRED)
+# =====================================
+# Generate secure keys using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+
+# JWT Secret (minimum 32 characters)
+JWT_SECRET=your_jwt_secret_key_minimum_32_characters_long
+
+# API Key Secret (minimum 16 characters)
+API_KEY_SECRET=your_api_key_secret_here
+
+# Encryption Key (minimum 32 characters) - used for PCI DSS compliance
+ENCRYPTION_KEY=your_encryption_key_minimum_32_characters_long
+
+# Main API Key for device registration and payments
+UPP_API_KEY=upp_your_secure_api_key_here
+
+# =====================================
+# CORS CONFIGURATION
+# =====================================
+# Comma-separated list of allowed origins
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,https://yourdomain.com
 
 # Server Configuration (Optional)
 PORT=3000
