--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "security:check": "node scripts/security-check.js",
+    "security:audit": "npm audit && npm run security:check"
   },
   "keywords": [
     "payment",
@@ -59,5 +61,9 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0",
+    "micromatch": "^4.0.8"
   }
 }
